--- a/contacts.html
+++ b/contacts.html
@@ -28,16 +28,16 @@
 
           <ul class="nav-list">
             <li class="nav-list__item">
-              <a href="./index.html" class="nav-list__link">Home</a>
+              <a href="./index.html" class="nav-list__link">Главная</a>
             </li>
             <li class="nav-list__item">
-              <a href="./projects.html" class="nav-list__link">Projects</a>
+              <a href="./projects.html" class="nav-list__link">Проекты</a>
             </li>
             <li class="nav-list__item">
               <a
                 href="./contacts.html"
                 class="nav-list__link nav-list__link--active"
-                >Contacts</a
+                >Контакты</a
               >
             </li>
           </ul>
@@ -47,7 +47,7 @@
 
     <main class="section">
       <div class="container">
-        <h1 class="title-1">Contacts</h1>
+        <h1 class="title-1">Контакты</h1>
 
         <ul class="content-list">
           <li class="content-list__item">
